# pipeworks_ipc

./: .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst  overview.rst  project_integration.rst  usage.rst
pipeworks_ipc/: __init__.py  hashing.py
tests/: test_hashing.py  test_package_typing.py
