[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeworks-ipc"
version = "0.1.0"
description = "Deterministic Interpretive Provenance Chain (IPC) hashing utilities for Pipe-Works projects."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "AA.Parky", email = "aa.parky@gmail.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.14.0",
    "black==26.1.0",
    "mypy>=1.19",
    "bandit[toml]>=1.7.10",
    "pre-commit>=4.0",
    "codespell>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/pipe-works/pipeworks_ipc"
Repository = "https://github.com/pipe-works/pipeworks_ipc"
Issues = "https://github.com/pipe-works/pipeworks_ipc/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeworks_ipc*"]
exclude = ["tests*", "docs*", "_working*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=pipeworks_ipc --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
